8329327: [lworld] refactoring ignored tests