@@ -31,8 +31,8 @@
  *          jdk.compiler/com.sun.tools.javac.code
  *          jdk.jdeps/com.sun.tools.classfile
  * @build toolbox.ToolBox toolbox.JavacTask
+ * @enablePreview
  * @run main ValueObjectsBinaryCompatibilityTests
- * @ignore Verifier error
  */
 
 import java.io.IOException;
@@ -92,6 +92,7 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
 
         new JavacTask(tb)
                 .outdir(out)
+                .options("--enable-preview", "-source", String.valueOf(Runtime.version().feature()))
                 .files(findJavaFiles(pkg))
                 .run();
 
@@ -99,6 +100,7 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
         String output = new JavaTask(tb)
                 .classpath(out.toString())
                 .classArgs("pkg.Client")
+                .vmOptions("--enable-preview")
                 .run()
                 .writeAll()
                 .getOutput(Task.OutputKind.STDOUT);
@@ -114,6 +116,7 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
         new JavacTask(tb)
                 .outdir(out)
                 .files(findJavaFiles(src1))
+                .options("--enable-preview", "-source", String.valueOf(Runtime.version().feature()))
                 .run();
 
         if (shouldFail) {
@@ -121,6 +124,7 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
             output = new JavaTask(tb)
                     .classpath(out.toString())
                     .classArgs("pkg.Client")
+                    .vmOptions("--enable-preview")
                     .run(Task.Expect.FAIL)
                     .writeAll()
                     .getOutput(Task.OutputKind.STDERR);
@@ -131,26 +135,25 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
             new JavaTask(tb)
                     .classpath(out.toString())
                     .classArgs("pkg.Client")
+                    .vmOptions("--enable-preview")
                     .run(Task.Expect.SUCCESS);
         }
     }
 
     @Test
-    public void testAbstractClassCompatibility(Path base) throws Exception {
-        /* If one of the identity or value modifiers is added to an abstract class, a pre-existing binary that attempts
-         * to extend the class may fail to load. Specifically, if the subclass has an incompatible identity or value
-         * modifier, or implements an interface with an incompatible identity or value modifier, class loading will fail
-         * with an IncompatibleClassChangeError.
+    public void testAbstractValueToValueClass(Path base) throws Exception {
+        /* Removing the abstract modifier from a value class declaration has the side-effect of making the class final,
+         * with binary compatibility risks outlined in 13.4.2.3
          */
         testCompatibilityAfterChange(
                 base,
                 """
                 package pkg;
-                public abstract class A {}
+                public abstract value class A {}
                 """,
                 """
                 package pkg;
-                public abstract identity class A {}
+                public value class A {}
                 """,
                 """
                 package pkg;
@@ -163,111 +166,22 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
                 true,
                 IncompatibleClassChangeError.class
         );
+    }
 
-        // another variation of the assertion above
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {}
-                """,
-                """
-                package pkg;
-                public abstract value class A {}
-                """,
-                """
-                package pkg;
-                public identity class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        // Removing one of the identity or value modifiers from an abstract class does not break compatibility with pre-existing binaries.
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract identity class A {}
-                """,
-                """
-                package pkg;
-                public abstract class A {}
-                """,
-                """
-                package pkg;
-                public identity class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                false,
-                null
-        );
-
-        // another variation of the assertion above
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract value class A {}
-                """,
-                """
-                package pkg;
-                public abstract class A {}
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                false,
-                null
-        );
-
-        /* Changing an identity class that is declared abstract to no longer be declared abstract does not break
-         * compatibility with pre-existing binaries.
+    @Test
+    public void testAbstractOrFinalIdentityToValueClass(Path base) throws Exception {
+        /* Modifying an abstract or final identity class to be a value class does not break compatibility
+         * with pre-existing binaries
          */
         testCompatibilityAfterChange(
                 base,
                 """
                 package pkg;
-                public abstract identity class A {}
+                public abstract class A {}
                 """,
                 """
                 package pkg;
-                public identity class A {}
-                """,
-                """
-                package pkg;
-                public identity class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                false,
-                null
-        );
-
-        // another variation of the assertion above
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract identity class A {}
-                """,
-                """
-                package pkg;
-                public identity class A {}
+                public abstract value class A {}
                 """,
                 """
                 package pkg;
@@ -281,131 +195,20 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
                 null
         );
 
-        /* Modifying a non-abstract identity class to be a value class is a binary compatible change, as long as the class
-         * is already final and all its constructors are private. If the class is not final, declaring it a value class
-         * has the effect of declaring the class final (13.4.2.3). If the class has a non-private constructor,
-         * pre-existing binaries that attempt to invoke that constructor will behave as if the constructor had been
-         * removed (13.4.12).
-         */
         testCompatibilityAfterChange(
                 base,
                 """
                 package pkg;
-                public final identity class A {}
+                public final class A {}
                 """,
                 """
                 package pkg;
-                public value class A {}
+                public final value class A {}
                 """,
                 """
                 package pkg;
-                public identity class Client {
-                    public static void main(String... args) {
-                        A a = new A();
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                InstantiationError.class
-        );
-
-        // another variation of the assertion above
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public identity class A {}
-                """,
-                """
-                package pkg;
-                public value class A {}
-                """,
-                """
-                package pkg;
-                public identity class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        /* Modifying a non-abstract value class to be an identity class is a binary compatible change, as long as all
-         * of the class's constructors are private. If the class has a non-private constructor, pre-existing binaries
-         * that attempt to invoke that constructor will behave as if the constructor had been removed
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public value class A {}
-                """,
-                """
-                package pkg;
-                public identity class A {}
-                """,
-                """
-                package pkg;
-                public identity class Client {
-                    public static void main(String... args) {
-                        A a = new A();
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                NoSuchMethodError.class
-        );
-    }
-
-    @Test
-    public void testFieldCompatibility(Path base) throws Exception {
-        /* Adding an instance field to an abstract class that is not an identity class also has the side-effect of
-         * making the class an identity class
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {}
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    int i;
-                }
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        // another variation of the assertion above
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {}
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    static int i; // OK no instance field
-                }
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
+                public class Client {
+                    A a;
                     public static void main(String... args) {
                         System.out.println("Hello World!");
                     }
@@ -414,112 +217,22 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
                 false,
                 null
         );
-
-        /* Removing a static modifier from a field of an abstract class that is not an identity class also has the
-         * side-effect of making the class an identity class
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {
-                    static int i;
-                }
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    int i;
-                }
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
     }
 
     @Test
-    public void testSynchronizedCompatibility(Path base) throws Exception {
-        /* Adding a synchronized modifier to a method of an identity class does not break compatibility with
-         * pre-existing binaries
+    public void testAddingValueModifier(Path base) throws Exception {
+        /* Adding the value modifier to a non-abstract, non-final class declaration has the side-effect of making
+         * the class final, with binary compatibility risks outlined in 13.4.2.3
          */
         testCompatibilityAfterChange(
                 base,
                 """
                 package pkg;
-                public identity class A {
-                    void m() {}
-                }
+                public class A {}
                 """,
                 """
                 package pkg;
-                public identity class A {
-                    synchronized void m() {}
-                }
-                """,
-                """
-                package pkg;
-                public identity class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                false,
-                null
-        );
-
-        /* Adding a synchronized modifier to a method of an abstract class that is not an identity class has the
-         * side-effect of making the class an identity class
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {
-                    void m() {}
-                }
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    synchronized void m() {}
-                }
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        /* Deleting a synchronized modifier of a method does not break compatibility with pre-existing binaries
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {
-                    synchronized void m() {}
-                }
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    void m() {}
-                }
+                public value class A {}
                 """,
                 """
                 package pkg;
@@ -529,29 +242,25 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
                     }
                 }
                 """,
-                false,
-                null
+                true,
+                IncompatibleClassChangeError.class
         );
     }
 
     @Test
-    public void testConstructorCompatibility(Path base) throws Exception {
-        /* Adding a throws clause to the constructor of an abstract class that is not an identity class has the
-         * side-effect of making the class an identity class
+    public void testValueToIdentityClass(Path base) throws Exception {
+        /* If a value class is changed to be an identity class, then an IncompatibleClassChangeError is thrown if a
+         * binary of a pre-existing value subclass of this class is loaded
          */
         testCompatibilityAfterChange(
                 base,
                 """
                 package pkg;
-                public abstract class A {
-                    public A() {}
-                }
+                public abstract value class A {}
                 """,
                 """
                 package pkg;
-                public abstract class A {
-                    public A() throws Exception {}
-                }
+                public abstract class A {}
                 """,
                 """
                 package pkg;
@@ -563,197 +272,6 @@ public class ValueObjectsBinaryCompatibilityTests extends TestRunner {
                 """,
                 true,
                 IncompatibleClassChangeError.class
-        );
-
-        /* changes to the body of the constructor of an abstract class that is not an identity class, other than adding
-         * or removing the super(); call, have the side-effect of making the class an identity class
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {
-                    public A() { super(); }
-                    void m() {}
-                }
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    public A() { super(); m(); }
-                    void m() {}
-                }
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        /* Adding type parameters to the constructor of an abstract class that is not an identity class has the
-         * side-effect of making the class an identity class
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {
-                    public A() {}
-                }
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    public <T> A() {}
-                }
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        /* Changing the declared access of the constructor of an abstract class that is not an identity class to permit
-         * less access may also have the side-effect of making the class an identity class
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public abstract class A {
-                    public A() {}
-                }
-                """,
-                """
-                package pkg;
-                public abstract class A {
-                    // this constructor has less access than the class so it will be considered an identity class
-                    protected A() {}
-                }
-                """,
-                """
-                package pkg;
-                public value class Client extends A {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class  //currently failing with this error, but the spec mentions NoSuchMethodError
-        );
-    }
-
-    @Test
-    public void testInterfaceCompatibility(Path base) throws Exception {
-        /* If one of the identity or value modifiers is added to an interface, a pre-existing binary that attempts to
-         * extend or implement the interface may fail to load. Specifically, if the subclass or subinterface has an
-         * incompatible identity or value modifier, or extends a class or interface with an incompatible identity or
-         * value modifier, class loading will fail with an IncompatibleClassChangeError
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public interface I {}
-                """,
-                """
-                package pkg;
-                public identity interface I {}
-                """,
-                """
-                package pkg;
-                public value class Client implements I {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        // another variation of the assertion above
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public interface I {}
-                """,
-                """
-                package pkg;
-                public value interface I {}
-                """,
-                """
-                package pkg;
-                public identity class Client implements I {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                true,
-                IncompatibleClassChangeError.class
-        );
-
-        /* Removing one of the identity or value modifiers from an interface does not break compatibility with
-         * pre-existing binaries
-         */
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public identity interface I {}
-                """,
-                """
-                package pkg;
-                public interface I {}
-                """,
-                """
-                package pkg;
-                public identity class Client implements I {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                false,
-                null
-        );
-
-        // another variation of the assertion above
-        testCompatibilityAfterChange(
-                base,
-                """
-                package pkg;
-                public value interface I {}
-                """,
-                """
-                package pkg;
-                public interface I {}
-                """,
-                """
-                package pkg;
-                public value class Client implements I {
-                    public static void main(String... args) {
-                        System.out.println("Hello World!");
-                    }
-                }
-                """,
-                false,
-                null
         );
     }
 }
